add beginning of lexer and unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,10 @@ project(abstract_vm)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(untitled srcs/main.cpp srcs/Commands.cpp)
+set(sourceCode srcs/Commands.cpp srcs/Lexer.cpp tests/testCommands.cpp tests/testLexer.cpp srcs/Token.cpp)
+
+set(testCode tests/testCommands.cpp tests/testLexer.cpp)
+
+add_executable(abstract_vm srcs/main.cpp ${sourceCode})
+
+add_executable(tests ${sourceCode} ${testCode})
