--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,10 @@ set(CMAKE_CXX_STANDARD 11)
 
 set(sourceCode srcs/Commands.cpp srcs/Lexer.cpp srcs/Parser.cpp srcs/Token.cpp)
 
-set(testCode tests/testCommands.cpp tests/testCommentsLexer.cpp tests/testCommandsLexer.cpp tests/testTypeLexer.cpp tests/testBracketsLexer.cpp tests/testValuesLexer.cpp)
+set(testLexerCode tests/testCommands.cpp tests/lexer/testCommentsLexer.cpp tests/lexer/testCommandsLexer.cpp tests/lexer/testTypeLexer.cpp tests/lexer/testBracketsLexer.cpp tests/lexer/testValuesLexer.cpp)
 
 set(HEADER_FILES includes/Commands.hpp includes/Lexer.hpp includes/Parser.hpp includes/Token.hpp)
 
 add_executable(abstract_vm ${HEADER_FILES} srcs/main.cpp ${sourceCode})
 
-add_executable(tests ${HEADER_FILES} ${sourceCode} ${testCode})
+add_executable(testsLexer ${HEADER_FILES} ${sourceCode} ${testLexerCode})
