add toString and some tests on Operand class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,21 +3,25 @@ project(abstract_vm)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(sourceCode srcs/Commands.cpp srcs/Lexer.cpp srcs/Parser.cpp srcs/Token.cpp srcs/Stack.cpp srcs/Operand.cpp)
+set(sourceCode srcs/Commands.cpp srcs/Lexer.cpp srcs/Parser.cpp srcs/Token.cpp srcs/Stack.cpp srcs/Operand.tpp)
 
 set(testLexerCode tests/lexer/testCommentsLexer.cpp tests/lexer/testCommandsLexer.cpp tests/lexer/testTypeLexer.cpp tests/lexer/testBracketsLexer.cpp tests/lexer/testValuesLexer.cpp)
 
 set(testParserCode tests/parser/testPushAssertParser.cpp tests/parser/testSingleParameterCommandParser.cpp)
 
+set(testOperandCode tests/operand/testCreateOperand.cpp)
+
 set(testMainCode tests/testCommands.cpp)
 
-set(HEADER_FILES includes/Commands.hpp includes/Lexer.hpp includes/Parser.hpp includes/Token.hpp includes/Stack.hpp includes/Operand.hpp includes/IOperand.hpp includes/eOperandType.hpp)
+set(HEADER_FILES includes/Commands.hpp includes/Lexer.hpp includes/Parser.hpp includes/Token.hpp includes/Stack.hpp includes/IOperand.hpp includes/eOperandType.hpp)
 
 add_executable(abstract_vm ${HEADER_FILES} srcs/main.cpp ${sourceCode})
 
 add_executable(testsLexer ${HEADER_FILES} ${sourceCode} ${testLexerCode} ${testMainCode})
 
 add_executable(testsParser ${HEADER_FILES} ${sourceCode} ${testParserCode} ${testMainCode})
+
+add_executable(testsOperand ${HEADER_FILES} ${sourceCode} ${testOperandCode} ${testMainCode})
 
 add_executable(testsAll ${HEADER_FILES} ${sourceCode} ${testLexerCode} ${testParserCode} ${testMainCode})
 
