--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,13 @@
 cmake_minimum_required(VERSION 3.9)
 project(abstract_vm)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+
 set(CMAKE_CXX_STANDARD 11)
 
-set(sourceCode srcs/Commands.cpp srcs/Lexer.cpp srcs/Parser.cpp srcs/Token.cpp srcs/Stack.cpp srcs/Operand.tpp)
+set(sourceCode srcs/Commands.cpp srcs/Lexer.cpp srcs/Parser.cpp srcs/Token.cpp srcs/Stack.cpp srcs/Operand.tpp srcs/OperandFactory.cpp)
+
+set(exceptionSourceCode srcs/exceptions/OperandExceptions.cpp srcs/exceptions/LexerExceptions.cpp)
 
 set(testLexerCode tests/lexer/testCommentsLexer.cpp tests/lexer/testCommandsLexer.cpp tests/lexer/testTypeLexer.cpp tests/lexer/testBracketsLexer.cpp tests/lexer/testValuesLexer.cpp)
 
@@ -11,17 +15,23 @@ set(testParserCode tests/parser/testPushAssertParser.cpp tests/parser/testSingle
 
 set(testOperandCode tests/operand/testCreateOperand.cpp tests/operand/testAddOperand.cpp)
 
+set(testOperandFactoryCode tests/operandFactory/testNewCharOperand.cpp)
+
 set(testMainCode tests/testCommands.cpp)
 
-set(HEADER_FILES includes/Commands.hpp includes/Lexer.hpp includes/Parser.hpp includes/Token.hpp includes/Stack.hpp includes/IOperand.hpp includes/eOperandType.hpp)
+set(HEADER_FILES includes/Commands.hpp includes/Lexer.hpp includes/Parser.hpp includes/Token.hpp includes/Stack.hpp includes/IOperand.hpp includes/eOperandType.hpp includes/OperandFactory.hpp)
 
-add_executable(abstract_vm ${HEADER_FILES} srcs/main.cpp ${sourceCode})
+set(EXCEPTION_HEADER_FILES includes/exceptions/OperandExceptions.hpp includes/exceptions/LexerExceptions.hpp)
 
-add_executable(testsLexer ${HEADER_FILES} ${sourceCode} ${testLexerCode} ${testMainCode})
+add_executable(abstract_vm ${HEADER_FILES} ${EXCEPTION_HEADER_FILES} srcs/main.cpp ${sourceCode} ${exceptionSourceCode})
 
-add_executable(testsParser ${HEADER_FILES} ${sourceCode} ${testParserCode} ${testMainCode})
+add_executable(testsLexer ${HEADER_FILES} ${EXCEPTION_HEADER_FILES} ${sourceCode} ${exceptionSourceCode} ${testLexerCode} ${testMainCode})
 
-add_executable(testsOperand ${HEADER_FILES} ${sourceCode} ${testOperandCode} ${testMainCode})
+add_executable(testsParser ${HEADER_FILES} ${EXCEPTION_HEADER_FILES} ${sourceCode} ${exceptionSourceCode} ${testParserCode} ${testMainCode})
 
-add_executable(testsAll ${HEADER_FILES} ${sourceCode} ${testLexerCode} ${testParserCode} ${testMainCode})
+add_executable(testsOperand ${HEADER_FILES} ${EXCEPTION_HEADER_FILES} ${sourceCode} ${exceptionSourceCode} ${testOperandCode} ${testMainCode})
+
+add_executable(testsOperandFactory ${HEADER_FILES} ${EXCEPTION_HEADER_FILES} ${sourceCode} ${exceptionSourceCode} ${testOperandFactoryCode} ${testMainCode})
+
+add_executable(testsAll ${HEADER_FILES} ${EXCEPTION_HEADER_FILES} ${sourceCode} ${exceptionSourceCode} ${testLexerCode} ${testParserCode} ${testMainCode})
 
