created stack exceptions class, new test repo for stack and edited CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.9)
 project(abstract_vm)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
 
 set(CMAKE_CXX_STANDARD 11)
 
 set(sourceCode srcs/Commands.cpp srcs/Lexer.cpp srcs/Parser.cpp srcs/Token.cpp srcs/Stack.cpp includes/Operand.hpp srcs/OperandFactory.cpp)
 
-set(exceptionSourceCode srcs/exceptions/OperandExceptions.cpp srcs/exceptions/LexerExceptions.cpp)
+set(exceptionSourceCode srcs/exceptions/OperandExceptions.cpp srcs/exceptions/LexerExceptions.cpp srcs/exceptions/StackExceptions.cpp)
 
 set(testLexerCode tests/lexer/testCommentsLexer.cpp tests/lexer/testCommandsLexer.cpp tests/lexer/testTypeLexer.cpp tests/lexer/testBracketsLexer.cpp tests/lexer/testValuesLexer.cpp)
 
@@ -17,11 +17,13 @@ set(testOperandCode tests/operand/testCreateOperand.cpp tests/operand/testAddOpe
 
 set(testOperandFactoryCode tests/operandFactory/testNewCharOperand.cpp tests/operandFactory/testNewShortOperand.cpp tests/operandFactory/testNewIntOperand.cpp tests/operandFactory/testNewFloatOperand.cpp tests/operandFactory/testNewDoubleOperand.cpp)
 
+set(testStackCode tests/stack/testPopStack.cpp)
+
 set(testMainCode tests/testCommands.cpp)
 
 set(HEADER_FILES includes/Commands.hpp includes/Lexer.hpp includes/Parser.hpp includes/Token.hpp includes/Stack.hpp includes/IOperand.hpp includes/eOperandType.hpp includes/OperandFactory.hpp)
 
-set(EXCEPTION_HEADER_FILES includes/exceptions/OperandExceptions.hpp includes/exceptions/LexerExceptions.hpp)
+set(EXCEPTION_HEADER_FILES includes/exceptions/OperandExceptions.hpp includes/exceptions/LexerExceptions.hpp includes/exceptions/StackExceptions.hpp)
 
 add_executable(abstract_vm ${HEADER_FILES} ${EXCEPTION_HEADER_FILES} srcs/main.cpp ${sourceCode} ${exceptionSourceCode})
 
@@ -33,5 +35,7 @@ add_executable(testsOperand ${HEADER_FILES} ${EXCEPTION_HEADER_FILES} ${sourceCo
 
 add_executable(testsOperandFactory ${HEADER_FILES} ${EXCEPTION_HEADER_FILES} ${sourceCode} ${exceptionSourceCode} ${testOperandFactoryCode} ${testMainCode})
 
-add_executable(testsAll ${HEADER_FILES} ${EXCEPTION_HEADER_FILES} ${sourceCode} ${exceptionSourceCode} ${testLexerCode} ${testParserCode} ${testOperandCode} ${testOperandFactoryCode} ${testMainCode})
+add_executable(testsStack ${HEADER_FILES} ${EXCEPTION_HEADER_FILES} ${sourceCode} ${exceptionSourceCode} ${testStackCode} ${testMainCode})
+
+add_executable(testsAll ${HEADER_FILES} ${EXCEPTION_HEADER_FILES} ${sourceCode} ${exceptionSourceCode} ${testLexerCode} ${testParserCode} ${testOperandCode} ${testOperandFactoryCode} ${testStackCode} ${testMainCode})
 
